@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-17T08:29:40Z",
+  "timestamp" : "2022-11-17T16:31:14Z",
   "count_outdated" : 629,
   "uniques_outdated" : 397,
-  "count" : 637,
-  "uniques" : 403,
+  "count" : 639,
+  "uniques" : 404,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -35,10 +35,10 @@
     },
     {
       "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
