@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 2,
+  "count": 10,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
