@@ -1,3 +1,11 @@
+2022-11-17T16:31:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3490129612 # 622
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 403 637
+* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 404 639
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-11-17]
+
 2022-11-17T08:29:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3486584677 # 621
 * notice: last 14d: unq all: 2 8
